# LifeGameParallel

./: Board.c  Board.h  CMakeLists.txt  DistributedBoard.c  DistributedBoard.h  FindMKL.cmake  Makefile  README.md  life_seq.c  main.c  notes  omp_life.c  runMpiOMP.c  runMpiOMP.h  runMpiSeq.c  runMpiSeq.h  runOMP.c  runOMP.h  runPthreads.c  runPthreads.h  runSeq.c  runSeq.h  tests.c
jobs/: benchMPI_OMP_SYNC.sh  benchMPI_SEQ_ASYNC.sh  benchMPI_SEQ_SYNC.sh  benchOMP.sh  benchPTHREADS.sh  benchSEQ.sh  cacheOptimization.sh  mergeBenches.sh
liblife/: Board.c  Board.h  CMakeLists.txt  DistributedBoard.c  DistributedBoard.h  Timer.c  Timer.h  runFuncs.h  runMpiOMP.c  runMpiOMP.h  runMpiSeq.c  runMpiSeq.h  runOMP.c  runOMP.h  runPthreads.c  runPthreads.h  runSeq.c  runSeq.h  utils.c  utils.h
plots/: cacheOptimization.p  speedupMPI_OMP_SYNC.p  speedupMPI_SEQ_ASYNC.p  speedupMPI_SEQ_SYNC.p  speedupOMP.p  speedupPTHREADS.p
